# interview-prep-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: additional_problems.json  problems.json
src/: ai_reviewer.py  cli.py  database.py  models.py
tests/: test_database.py  test_review.py  test_tags.py
