[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-prep"
version = "0.1.0"
description = "CLI tool for coding interview preparation"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
prep = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
